--- a/public/css/style.less
+++ b/public/css/style.less
@@ -5,13 +5,13 @@ body {
   -ms-user-select: none;
   user-select: none;
   overflow: hidden;
+  cursor: none;
 }
 
 .menu {
 	position: absolute;
 	top: 0;
-	left: 50%;
-	margin-left: -36px;
+	right: 0;
 	z-index: 3;
 	display:none;
 
@@ -26,7 +26,13 @@ body {
 	z-index: 0;
 	min-height: 50px;
 	min-width: 50px;
-	overflow: hidden;
+
+	.widget-body {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+	}
 
 	&.root {
 		top: 0px;
@@ -34,18 +40,35 @@ body {
 		bottom: 0px;
 		right: 0px;
 	}
+}
 
-	&:hover {
-		z-index: 2;
+body.active {
+	cursor: default;
+	.widget {
+		&.selected {
+			& > .menu {
+				z-index: 3;
+				display:block;
+			}
+		}
 
-		.menu {
-			z-index: 3;
-			display:block;
+		&:hover {
+			z-index: 2;
 		}
 	}
 }
 
+
 .dragresize {
  position: absolute;
 }
+
+#notification-area {
+	width: 100%;
+	z-index: 4;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 
