--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,9 +7,11 @@ html
 	body(onload='boot()')
 		block content
 
+		script(src='/js/utils.js',type='text/javascript')
 		script(src='/js/dragresize.js',type='text/javascript')
 		script(src='/socket.io/socket.io.js',type='text/javascript')
 		script(src='/js/widgets/widget.js',type='text/javascript')
 		script(src='/js/widgets/html.js',type='text/javascript')
 		script(src='/js/widgets/container.js',type='text/javascript')
+		script(src='/js/nodeboard.js',type='text/javascript')
 		script(src='/js/main.js',type='text/javascript')
